src/test/ui/associated-types/higher-ranked-projection.bad.nll.stderr
error: higher-ranked subtype error
  --> $DIR/higher-ranked-projection.rs:25:5
   |
LL |     foo(());
   |     ^^^^^^^

error: aborting due to previous error

